# rs-stoplist-project

./: .dockerignore  .env.backup  .env.backup.20250731_221231  .env.example  .env.jugoexsim  .env.jugoexsim_final  .env.jugoexsim_production  .gitignore  .pre-commit-config.yaml  .taskmasterconfig  DEPLOY_TO_GITHUB.md  Dockerfile  EMAIL_SETUP_GUIDE.md  Makefile  QUICK_DEPLOY_WITHOUT_GH_CLI.md  README.md  RS_stoplist_20250729.csv  START_HERE.md  demo_sftp_test.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  lista 29 07 2025.xlsx  pyproject.toml  quick_test.py  quick_test_jugoexsim.py  requirements.txt  setup_email.py  test_application.sh  test_email_smtp.py  test_jugoexsim_email.py  test_sftp_connection.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  ci.yml.disabled  simple-ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
config/: config.test.yaml  logging.yaml
docs/: BUSINESS_PROCESS.md  CI_FIXES.md  ENVIRONMENT_VARIABLES.md  changelog.md  deployment_guide.md  schema.sql  tasktracker.md  user_guide.md
src/application/: container.py
src/application/api/: health_checks.py  main.py
src/application/handlers/: main_handler.py
src/application/schedulers/: main_scheduler.py
src/config/: __init__.py
src/domain/models/: __init__.py
src/domain/repositories/: __init__.py
src/domain/services/: __init__.py  notifications.py
src/infrastructure/email/: email_reader.py
src/infrastructure/error_handling/: error_categories.py  graceful_degradation.py
src/infrastructure/logging/: logger.py
src/infrastructure/monitoring/: metrics.py
src/infrastructure/notifications/: email_sender.py  telegram_sender.py
src/infrastructure/patterns/: circuit_breaker.py
src/infrastructure/security/: rate_limiter.py
src/infrastructure/sftp/: sftp_uploader.py
src/infrastructure/storage/: database.py  file_processor.py  repositories.py
tests/: test_circuit_breaker.py  test_email_reader.py  test_file_processing.py  test_health_checks.py  test_main_handler.py  test_notifications.py  test_prometheus_metrics.py  test_sftp_validation.py
tests/integration/: test_full_flow.py
